# copybench

./: ProjectHome.md  configure.ac  mmap-mmap.c  mmap-write.c  read-write.c  test.sh
trunk/: Makefile  Makefile.am  configure.ac  test.sh
